// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Haciendo pruebas en componente GifGrid Debe mostrar <GifGrid /> correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInLeftBig"
  >
    Dr. House
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Haciendo pruebas en componente GifGrid Debe mostrar items cuando se cargan las imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInLeftBig"
  >
    Dr. House
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https:/localhost/algo/algo.png"
    />
  </div>
</Fragment>
`;
